@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Werewolf 1.06: Fixed an annoyance and added traitor transformation.
     * Commands now work with prefixes even in PM.
     * Ping: Determines end by numeric 315 instead of a 3-second timer now.
     * Werewolf: Fixed a GUARD issue and made it possible to VISIT yourself.
